--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@vite-pwa/nuxt": "^0.6.0",
-    "nuxt-auth-utils": "^0.0.20"
+    "@vite-pwa/nuxt": "^0.6.0"
   }
 }
