--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.11.0",
     "@vee-validate/nuxt": "^4.12.6",
     "@vee-validate/rules": "^4.12.6",
+    "@vee-validate/zod": "^4.12.6",
     "@vueuse/nuxt": "^10.9.0",
     "bcrypt": "^5.1.1",
     "h3-zod": "^0.5.3",
@@ -32,7 +33,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
-    "nuxt-auth-utils": "^0.0.20",
-    "@vite-pwa/nuxt": "^0.6.0"
+    "@vite-pwa/nuxt": "^0.6.0",
+    "nuxt-auth-utils": "^0.0.20"
   }
 }
