--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@vee-validate/nuxt": "^4.12.6",
     "@vee-validate/rules": "^4.12.6",
     "@vee-validate/zod": "^4.12.6",
+    "@vueuse/integrations": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
+    "google-auth-library": "^9.7.0",
     "h3-zod": "^0.5.3",
     "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "nodemailer": "^6.9.13",
     "nuxt": "^3.11.0",
     "pinia": "^2.1.7",
     "prisma": "^5.11.0",
+    "universal-cookie": "^6.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "zod": "^3.22.4"
@@ -34,6 +39,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
+    "@types/nodemailer": "^6.4.14",
     "@vite-pwa/nuxt": "^0.6.0",
     "nuxt-auth-utils": "^0.0.20"
   }
