--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nuxt": "^3.11.0",
     "pinia": "^2.1.7",
     "prisma": "^5.11.0",
+    "query-string": "^9.0.0",
     "universal-cookie": "^6.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
@@ -41,6 +42,8 @@
     "@types/lodash": "^4.17.0",
     "@types/nodemailer": "^6.4.14",
     "@vite-pwa/nuxt": "^0.6.0",
-    "nuxt-auth-utils": "^0.0.20"
+    "nuxt-auth-utils": "^0.0.20",
+    "nuxt-icon": "^0.6.10",
+    "sass": "^1.74.1"
   }
 }
